<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Battery may run out soon</string>
    <string name="battery_low_percent_format"><xliff:g id="percentage">%s</xliff:g> remaining</string>
    <string name="battery_low_percent_format_hybrid"><xliff:g id="percentage">%1$s</xliff:g> remaining, about <xliff:g id="time">%2$s</xliff:g> left based on your usage</string>
    <string name="battery_low_percent_format_hybrid_short"><xliff:g id="percentage">%1$s</xliff:g> remaining, about <xliff:g id="time">%2$s</xliff:g> left</string>
    <string name="battery_low_percent_format_saver_started"><xliff:g id="percentage">%s</xliff:g> remaining. Battery Saver is on.</string>
    <string name="invalid_charger">Can\'t charge via USB. Use the charger that came with your device.</string>
    <string name="invalid_charger_title">Can\'t charge via USB</string>
    <string name="invalid_charger_text">Use the charger that came with your device</string>
    <string name="battery_low_why">Settings</string>
    <string name="battery_saver_confirmation_title">Turn on Battery Saver?</string>
    <string name="battery_saver_confirmation_title_generic">About Battery Saver</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on Battery Saver</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_network_name_separator" translatable="false">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to access <xliff:g id="usb_device" example="USB Headphones">%2$s</xliff:g>?</string>
    <string name="usb_device_permission_prompt_warn">Allow <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to access <xliff:g id="usb_device" example="USB Headphones">%2$s</xliff:g>?\nThis app has not been granted record permission but could capture audio through this USB device.</string>
    <string name="usb_accessory_permission_prompt">Allow <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to access <xliff:g id="usb_accessory"  example="USB Dock">%2$s</xliff:g>?</string>
    <string name="usb_device_confirm_prompt">Open <xliff:g id="application">%1$s</xliff:g> to handle <xliff:g id="usb_device">%2$s</xliff:g>?</string>
    <string name="usb_device_confirm_prompt_warn">Open <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to handle <xliff:g id="usb_device" example="USB Headphones">%2$s</xliff:g>?\nThis app has not been granted record permission but could capture audio through this USB device.</string>
    <string name="usb_accessory_confirm_prompt">Open <xliff:g id="application">%1$s</xliff:g> to handle <xliff:g id="usb_accessory">%2$s</xliff:g>?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at <xliff:g id="url">%1$s</xliff:g></string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Always open <xliff:g id="application">%1$s</xliff:g> when <xliff:g id="usb_device">%2$s</xliff:g> is connected</string>
    <string name="always_use_accessory">Always open <xliff:g id="application">%1$s</xliff:g> when <xliff:g id="usb_accessory">%2$s</xliff:g> is connected</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">The computer\'s RSA key fingerprint is:\n<xliff:g id="fingerprint">%1$s</xliff:g></string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="usb_debugging_allow">Allow</string>
    <string name="usb_debugging_secondary_user_title">USB debugging not allowed</string>
    <string name="usb_debugging_secondary_user_message">The user currently signed in to this device can\'t turn on USB debugging. To use this feature, switch to the primary user.</string>
    <string name="wifi_debugging_title">Allow wireless debugging on this network?</string>
    <string name="wifi_debugging_message">Network Name (SSID)\n<xliff:g id="ssid" example="My wifi">%1$s</xliff:g>\n\nWi\u2011Fi Address (BSSID)\n<xliff:g id="bssid" example="AB:CD:EF:12:34:56">%2$s</xliff:g></string>
    <string name="wifi_debugging_always">Always allow on this network</string>
    <string name="wifi_debugging_allow">Allow</string>
    <string name="wifi_debugging_secondary_user_title">Wireless debugging not allowed</string>
    <string name="wifi_debugging_secondary_user_message">The user currently signed in to this device can\u2019t turn on wireless debugging. To use this feature, switch to the primary user.</string>
    <string name="usb_contaminant_title">USB port disabled</string>
    <string name="usb_contaminant_message">To protect your device from liquid or debris, the USB port is disabled and won\u2019t detect any accessories.\n\nYou\u2019ll be notified when it\u2019s okay to use the USB port again.</string>
    <string name="usb_port_enabled">USB port enabled to detect chargers and accessories</string>
    <string name="usb_disable_contaminant_detection">Enable USB</string>
    <string name="learn_more">Learn more</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="global_action_screenshot">Screenshot</string>
    <string name="remote_input_image_insertion_text">sent an image</string>
    <string name="screenshot_saving_ticker">Saving screenshot\u2026</string>
    <string name="screenshot_saving_title">Saving screenshot\u2026</string>
    <string name="screenshot_saved_title">Screenshot saved</string>
    <string name="screenshot_saved_text">Tap to view your screenshot</string>
    <string name="screenshot_failed_title">Couldn\'t save screenshot</string>
    <string name="screenshot_failed_to_save_unknown_text">Try taking screenshot again</string>
    <string name="screenshot_failed_to_save_text">Can\'t save screenshot due to limited storage space</string>
    <string name="screenshot_failed_to_capture_text">Taking screenshots isn\'t allowed by the app or
        your organization</string>
    <string name="screenshot_dismiss_ui_description">Dismiss screenshot</string>
    <string name="screenshot_preview_description">Screenshot preview</string>
    <string name="screenrecord_name">Screen Recorder</string>
    <string name="screenrecord_channel_description">Ongoing notification for a screen record session</string>
    <string name="screenrecord_start_label">Start Recording?</string>
    <string name="screenrecord_description">While recording, Android System can capture any sensitive information that\u2019s visible on your screen or played on your device. This includes passwords, payment info, photos, messages, and audio.</string>
    <string name="screenrecord_audio_label">Record audio</string>
    <string name="screenrecord_device_audio_label">Device audio</string>
    <string name="screenrecord_device_audio_description">Sound from your device, like music, calls, and ringtones</string>
    <string name="screenrecord_mic_label">Microphone</string>
    <string name="screenrecord_device_audio_and_mic_label">Device audio and microphone</string>
    <string name="screenrecord_start">Start</string>
    <string name="screenrecord_ongoing_screen_only">Recording screen</string>
    <string name="screenrecord_ongoing_screen_and_audio">Recording screen and audio</string>
    <string name="screenrecord_taps_label">Show touches on screen</string>
    <string name="screenrecord_stop_text">Tap to stop</string>
    <string name="screenrecord_stop_label">Stop</string>
    <string name="screenrecord_pause_label">Pause</string>
    <string name="screenrecord_resume_label">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="quick_settings_dnd_label">Do Not Disturb</string>
    <string name="quick_settings_bluetooth_label">Bluetooth</string>
    <string name="quick_settings_wifi_label">Wi-Fi</string>
    <string name="quick_settings_cast_title">Screen Cast</string>
    <string name="quick_settings_hotspot_label">Hotspot</string>
    <string name="quick_settings_cellular_detail_title">Mobile data</string>
    <string name="system_ui_tuner">System UI Tuner</string>
    <string name="show_battery_percentage">Show embedded battery percentage</string>
    <string name="show_battery_percentage_summary">Show battery level percentage inside the status bar icon when not charging</string>
    <string name="status_bar">Status bar</string>
    <string name="overview">Overview</string>
    <string name="demo_mode">System UI demo mode</string>
    <string name="status_bar_ethernet">Ethernet</string>
    <string name="status_bar_alarm">Alarm</string>
    <string name="status_bar_work">Work profile</string>
    <string name="status_bar_airplane">Airplane mode</string>
    <string name="tuner_persistent_warning">These experimental features may change, break, or disappear in future releases. Proceed with caution.</string>
    <string name="clock_seconds">Show clock seconds</string>
    <string name="clock_seconds_desc">Show clock seconds in the status bar. May impact battery life.</string>
    <string name="show_brightness">Show brightness in Quick Settings</string>
    <string name="tuner_full_zen_title">Show with volume controls</string>
    <string name="volume_and_do_not_disturb">Do Not Disturb</string>
    <string name="volume_up_silent">Exit Do Not Disturb on volume up</string>
    <string name="battery">Battery</string>
    <string name="clock">Clock</string>
    <string name="headset">Headset</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="nav_bar_layout">Layout</string>
    <string name="left_nav_bar_button_type">Extra left button type</string>
    <string name="right_nav_bar_button_type">Extra right button type</string>
    <string name="left_keycode">Left keycode</string>
    <string name="right_keycode">Right keycode</string>
    <string name="left_icon">Left icon</string>
    <string name="right_icon">Right icon</string>
    <string name="other">Other</string>
    <string name="lockscreen_shortcut_left">Left shortcut</string>
    <string name="lockscreen_shortcut_right">Right shortcut</string>
    <string name="lockscreen_unlock_left">Left shortcut also unlocks</string>
    <string name="lockscreen_unlock_right">Right shortcut also unlocks</string>
    <string name="slice_permission_text_1"> - It can read information from <xliff:g id="app" example="Example App">%1$s</xliff:g></string>
    <string name="slice_permission_text_2"> - It can take actions inside <xliff:g id="app" example="Example App">%1$s</xliff:g></string>
    <string name="slice_permission_checkbox">Allow <xliff:g id="app" example="Example App">%1$s</xliff:g> to show slices from any app</string>
</resources>