<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sysui="http://schemas.android.com/apk/res-auto"
    android:title="@string/system_ui_tuner">

    <com.android.systemui.tuner.TunerSwitch
        android:key="qs_show_brightness"
        android:title="@string/show_brightness"
        sysui:defValue="true" />

    <PreferenceScreen
        android:key="status_bar"
        android:title="@string/status_bar" >

        <Preference
            android:selectable="false"
            android:summary="@string/tuner_status_bar_explanation" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="rotate"
            android:title="@string/status_bar_settings_auto_rotation" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="headset"
            android:title="@string/headset" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="managed_profile"
            android:title="@string/status_bar_work" />

        <!-- ime -->
        <!-- sync_failing -->
        <!-- sync_active -->

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="cast"
            android:title="@string/quick_settings_cast_title" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="hotspot"
            android:title="@string/quick_settings_hotspot_label" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="bluetooth"
            android:title="@string/quick_settings_bluetooth_label" />

        <!-- nfc -->
        <!-- tty -->
        <!-- speakerphone -->

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="zen"
            android:title="@string/quick_settings_dnd_label" />

        <!-- mute -->

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="volume"
            android:title="@*android:string/volume_unknown" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="wifi"
            android:title="@string/quick_settings_wifi_label" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="ethernet"
            android:title="@string/status_bar_ethernet" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="mobile"
            android:title="@string/quick_settings_cellular_detail_title" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="airplane"
            android:title="@string/status_bar_airplane" />

        <!-- other weird signal stuff -->

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="battery"
            android:title="@string/battery" />

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="alarm_clock"
            android:title="@string/status_bar_alarm" />

        <!-- secure -->

        <com.android.systemui.tuner.StatusBarSwitch
            android:key="clock"
            android:title="@string/clock" />

    </PreferenceScreen>


    <PreferenceScreen
        android:key="overview"
        android:title="@string/overview" >

        <com.android.systemui.tuner.TunerSwitch
            android:key="overview_initial_state_paging"
            android:title="@string/overview_initial_state_paging"
            android:summary="@string/overview_initial_state_paging_desc" />

        <com.android.systemui.tuner.TunerSwitch
            android:key="overview_fast_toggle_via_button"
            android:title="@string/overview_fast_toggle_via_button"
            android:summary="@string/overview_fast_toggle_via_button_desc" />

    </PreferenceScreen>

    <SwitchPreference
        android:key="battery_pct"
        android:title="@string/show_battery_percentage"
        android:summary="@string/show_battery_percentage_summary"
        android:persistent="false" />

    <com.android.systemui.tuner.TunerSwitch
        android:key="clock_seconds"
        android:title="@string/clock_seconds"
        android:summary="@string/clock_seconds_desc" />

    <Preference
        android:key="demo_mode"
        android:title="@string/demo_mode"
        android:fragment="com.android.systemui.tuner.DemoModeFragment" />

    <Preference
        android:key="color_transform"
        android:title="@string/color_transform"
        android:fragment="com.android.systemui.tuner.ColorMatrixFragment" />

    <PreferenceScreen
        android:key="volume_and_do_not_disturb"
        android:title="@string/volume_and_do_not_disturb">

        <com.android.systemui.tuner.TunerSwitch
            android:key="sysui_show_full_zen"
            android:title="@string/tuner_full_zen_title"
            android:summary="@string/tuner_full_zen_summary" />

        <com.android.systemui.tuner.TunerSwitch
            android:key="sysui_volume_down_silent"
            android:title="@string/volume_down_silent"
            sysui:defValue="true" />

        <com.android.systemui.tuner.TunerSwitch
            android:key="sysui_volume_up_silent"
            android:title="@string/volume_up_silent"
            sysui:defValue="true" />

    </PreferenceScreen>

    <Preference
        android:key="nav_bar"
        android:title="@string/nav_bar"
        android:fragment="com.android.systemui.tuner.NavBarTuner" />

    <!-- Warning, this goes last. -->
    <Preference
        android:summary="@string/tuner_persistent_warning"
        android:selectable="false" />

</PreferenceScreen>
